--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
-<%= form_for @user do |f| %>
-  <%= f.label :email %>
-  <%= f.email_field :email %>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
+<%= form_tag users_path, method: :post do %>
+  <%= label_tag 'Email' %>
+  <%= email_field_tag :email, nil, placeholder: 'your_email@here.com' %>
+  <%= label_tag 'Password' %>
+  <%= password_field_tag :password %>
 
-  <%= f.submit 'Create Account' %>
+  <%= submit_tag 'Create Account' %>
 <% end %>
