--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
-<%= link_to 'Create Account', create_account_path %>
+<% if @user %>
+  <%= "Logged in as: #{@user.email}" %>
+<% else %>
+  <%= link_to 'Create Account', create_account_path %>
+<% end %>
