--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <% if @user %>
   <%= "Logged in as: #{@user.username}" %>
-  <%= link_to 'Log Out' %>
+  <%= link_to 'Log Out', logout_path, method: :delete  %>
 <% else %>
   <%= link_to 'Create Account', create_account_path %>
   <%= link_to 'Log In', login_path %>
