--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,6 @@
 
   <body>
     <%= yield %>
-    <%= javascript_pack_tag 'hello-world-bundle' %>
+    <%= javascript_pack_tag 'webpack-bundle' %>
   </body>
 </html>
