--- a/app/views/maps/new.html.erb
+++ b/app/views/maps/new.html.erb
@@ -1,1 +1,1 @@
-<%= react_component('NewTripContainer', props: {}, prerender: false) %>
+<%= react_component('NewScavengerHuntContainer', props: {}, prerender: false) %>
