--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,47 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+   margin: 0;
+   padding: 0;
+   font-family: 'Quicksand', sans-serif;
+   font-size: 18px;
+ }
+
+ .trip-form-container {
+   position: absolute;
+   top: 0px;
+   left: 0px;
+   width: 100%;
+   z-index: 100;
+   padding: 15px;
+   background-color: #FFF9C4;
+ }
+
+ a {
+   text-decoration: none;
+   color: #E040FB;
+ }
+
+ label {
+   margin-right: 15px;
+ }
+
+ input {
+   padding: 10px;
+   border-radius: 2px;
+   margin-right: 15px;
+   border: 1px solid #B0BEC5;
+ }
+
+ button {
+   padding: 10px;
+   border-radius: 2px;
+   border: 1px solid #B0BEC5;
+ }
+
+ p {
+   margin: 0px;
+   padding: 10px;
+ }
