--- a/app/views/scavenger_hunts/index.html.erb
+++ b/app/views/scavenger_hunts/index.html.erb
@@ -1,7 +1,7 @@
 <h2>Scavenger Hunts</h2>
 <ul>
   <%= @scavenger_hunts.each do |hunt| %>
-    <li><%= hunt.name %></li>
+    <%= link_to hunt.name, '/maps/new' %>
     <li><%= hunt.username %></li>
     <li><%= hunt.description %></li>
   <% end %>
