Move react components to scavenger_hunt path remove maps/new

--- a/app/views/scavenger_hunts/index.html.erb
+++ b/app/views/scavenger_hunts/index.html.erb
@@ -1,7 +1,7 @@
 <h2>Scavenger Hunts</h2>
 <ul>
   <%= @scavenger_hunts.each do |hunt| %>
-    <%= link_to hunt.name, '/maps/new' %>
+    <%= link_to hunt.name, scavenger_hunt_path(hunt.id) %>
     <li><%= hunt.username %></li>
     <li><%= hunt.description %></li>
   <% end %>
