--- a/app/views/scavenger_hunts/show.html.erb
+++ b/app/views/scavenger_hunts/show.html.erb
@@ -3,3 +3,5 @@
 <%= @scavenger_hunt.description %>
 
 <%= link_to 'Delete', scavenger_hunt_path(@scavenger_hunt.id), method: :delete %>
+
+<%= react_component('NewScavengerHuntContainer', props: {}, prerender: false) %>
