Add bootstrap files to application layout. Add main.scss file and preliminary styling. Update index.html.erb for root path

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,12 @@
-<% if @user %>
-  <%= "Logged in as: #{@user.username}" %>
-  <%= link_to 'Log Out', logout_path, method: :delete  %>
-<% else %>
-  <%= link_to 'Create Account', create_account_path %>
-  <%= link_to 'Log In', login_path %>
-<% end %>
+<main id="home">
+  <section id="form">
+    <%= form_tag login_path, method: :post, class: "form-group" do %>
+      <%= text_field_tag :username, nil, placeholder: :username %>
+      <%= password_field_tag :password, nil, placeholder: :password %>
+      <div class="form-buttons">
+        <%= submit_tag 'Sign in', class: "sign-in" %>
+        <%= link_to "Don't have an account? Register here", create_account_path, class: "create-account" %>
+      </div>
+    <% end %>
+  </section>
+</main>
