--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,18 @@
-<%= form_tag users_path, method: :post do %>
-  <%= label_tag 'Username' %>
-  <%= text_field_tag :username, nil, placeholder: 'username' %>
-  <%= label_tag 'Email' %>
-  <%= email_field_tag :email, nil, placeholder: 'your_email@here.com' %>
-  <%= label_tag 'Password' %>
-  <%= password_field_tag :password %>
-
-  <%= submit_tag 'Create Account' %>
-<% end %>
+<main id="home">
+  <header>
+    <div class="title">
+      find your adventure
+    </div>
+  </header>
+  <section id="form">
+    <%= form_tag users_path, method: :post, class: "form-group" do %>
+      <%= text_field_tag :username, nil, placeholder: :username %>
+      <%= email_field_tag :email, nil, placeholder: :email %>
+      <%= password_field_tag :password, nil, placeholder: :password %>
+      <div class="form-buttons">
+        <%= submit_tag 'Create an Account', class: "submit-button" %>
+        <%= link_to "Cancel", root_path, class: "form-button" %>
+      </div>
+    <% end %>
+  </section>
+</main>
