--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,16 @@
 <main id="home">
   <header>
     <div class="logo">
-      scavenger
+      scavengr
     </div>
   </header>
   <section id="form">
     <%= form_tag login_path, method: :post, class: "form-group" do %>
-      <%= text_field_tag :username, nil, placeholder: :username %>
-      <%= password_field_tag :password, nil, placeholder: :password %>
+      <%= text_field_tag :username, nil, placeholder: :username, required: :true%>
+      <%= password_field_tag :password, nil, placeholder: :password, required: :true %>
       <div class="form-buttons">
         <%= submit_tag 'Sign in', class: "submit-button" %>
-        <%= link_to "New to Scavengr? Create an account", create_account_path, class: "form-button" %>
+        <%= link_to "Register", create_account_path, class: "form-button" %>
       </div>
     <% end %>
   </section>
