--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,11 +6,11 @@
   </header>
   <section id="form">
     <%= form_tag users_path, method: :post, class: "form-group" do %>
-      <%= text_field_tag :username, nil, placeholder: :username %>
-      <%= email_field_tag :email, nil, placeholder: :email %>
-      <%= password_field_tag :password, nil, placeholder: :password %>
+      <%= text_field_tag :username, nil, placeholder: :username, required: :true %>
+      <%= email_field_tag :email, nil, placeholder: :email, required: :true %>
+      <%= password_field_tag :password, nil, placeholder: :password, required: :true  %>
       <div class="form-buttons">
-        <%= submit_tag 'Create an Account', class: "submit-button" %>
+        <%= submit_tag 'Submit', class: "submit-button" %>
         <%= link_to "Cancel", root_path, class: "form-button" %>
       </div>
     <% end %>
