--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
   </header>
   <section id="form">
     <%= form_tag users_path, method: :post, class: "form-group" do %>
-      <%= text_field_tag :username, nil, placeholder: :username, required: :true, autocomplete: :off%>
+      <%= text_field_tag :username, nil, placeholder: :username, required: :true, autocomplete: :off, maxlength: 25 %>
       <%= email_field_tag :email, nil, placeholder: :email, required: :true, autocomplete: :off %>
       <%= password_field_tag :password, nil, placeholder: :password, required: :true, autocomplete: :off, minlength: 8  %>
       <div class="form-buttons">
