--- a/app/views/scavenger_hunts/index.html.erb
+++ b/app/views/scavenger_hunts/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Scavenger Hunts</h2>
 <ul>
-  <%= @scavenger_hunts.each do |hunt| %>
+  <% @scavenger_hunts.each do |hunt| %>
     <%= link_to hunt.name, scavenger_hunt_path(hunt.id) %>
     <li><%= hunt.username %></li>
     <li><%= hunt.description %></li>
