--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -27,6 +27,76 @@ main {
   }
 }
 
+#dashboard {
+  display: grid;
+  grid-template: 100px 150px 1fr 1fr 1fr 1fr 1fr 100px/  1fr 1fr 1fr 1fr 1fr 1fr;
+  background-color: lightgrey;
+
+  nav {
+    grid-area: 1 / 1 / 2 / 7;
+    display: grid;
+    grid-template: 1fr / 50px 1fr 1fr 1fr 50px;
+    background-color: darkgrey;
+    padding: 17px 0 0 0;
+
+    .username {
+      grid-area: 1 / 3 / 1 / 4;
+      color: white;
+      font-size: 45px;
+      font-weight: bold;
+      text-align: center;
+    }
+  }
+
+  footer {
+    grid-area: 8 / 1 / 9 / 7;
+    display: grid;
+    grid-template: 1fr / 75px 1fr 1fr 1fr 75px;
+    background-color: darkgrey;
+    padding: 0 0 12px 0;
+
+    .footer-button {
+      color: white;
+      font-size: 50px;
+      font-weight: bold;
+    }
+
+    .sign-out {
+      grid-area: 8 / 2 / 9 / 3;
+      text-align: left;
+    }
+
+    .home {
+      grid-area: 8 / 4 / 9 / 5;
+      text-align: right;
+    }
+
+  }
+
+  .form-button {
+    margin: 100px 0 0px 0;
+    padding: 60px 0 0 0;
+    font-size: 35px;
+  }
+
+  #dash-button1 {
+    grid-area: 3 / 2 / 3 / 6;
+  }
+
+  #dash-button2 {
+    grid-area: 4 / 2 / 4 / 6;
+  }
+
+  #dash-button3 {
+    grid-area: 5 / 2 / 5 / 6;
+  }
+
+  #dash-button4 {
+    grid-area: 6 / 2 / 6 / 6;
+  }
+}
+
+
 #form {
   grid-area: 3 / 2 / 6 / 6;
   display: flex;
@@ -62,35 +132,41 @@ main {
     display: grid;
     grid-template: 1fr 1fr / 1fr 1fr 5px 1fr 1fr;
     width: 100%;
-    text-align: center;
+    font-size:25px;
+    margin: 0 0 5px 0;
 
-    .submit-button, .form-button {
-      grid-area: 1 / 1 / 4 / 3;
-    	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
-    	background-color:#768d87;
-    	border-radius:10px;
-    	border:1px solid #566963;
-    	cursor:pointer;
-    	color:#ffffff;
-    	font-size:25px;
-    	font-weight: bold;
-      margin: 0 0 5px 0;
-    }
 
-    .submit-button:hover, .form-button:hover  {
-    	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
-    	background-color:#6c7c7c;
-      text-decoration: none;
-    }
-
-    .submit-button:active, .form-button:active {
-    	position:relative;
-    	top: 1px;
-    }
-
-    .form-button{
+    .submit-button {
       grid-area: 1 / 4 / 4 / 6;
+    }
+
+    .form-button {
+      grid-area: 1 / 1 / 4 / 3;
       padding: 15px 0 0 0;
     }
   }
+
+}
+
+.submit-button, .form-button {
+  background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+  background-color:#768d87;
+  border-radius:10px;
+  border:1px solid #566963;
+  cursor:pointer;
+  color:#ffffff;
+  text-align: center;
+  font-weight: bold;
+}
+
+.submit-button:hover, .form-button:hover  {
+  background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+  background-color:#6c7c7c;
+  text-decoration: none;
+}
+
+.submit-button:active, .form-button:active {
+  position:relative;
+  color:#ffffff;
+  top: 1px;
 }
