--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,8 +10,8 @@
     <%= link_to 'Current Scavenger Hunts', '#', { id: "dash-button3", class: "form-button" } %>
     <%= link_to 'Scavenger Hunt Search', scavenger_hunts_path, { id: "dash-button4", class: "form-button" } %>
     <footer>
-      <%= link_to '<i class="fas fa-home"></i>'.html_safe, root_path, class: 'footer-button home' %>
-      <%= link_to '<i class="fas fa-sign-out-alt"></i>'.html_safe, logout_path, method: :delete, class: 'footer-button sign-out' %>
+      <%= link_to '<i class="fas fa-home"></i>'.html_safe, root_path, class: 'footer-button home', title: 'Home' %>
+      <%= link_to '<i class="fas fa-sign-out-alt"></i>'.html_safe, logout_path, method: :delete, class: 'footer-button sign-out', title: 'Sign out' %>
     </footer>
   </main>
 <% else %>
