--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,4 @@
-main {
+html, body, main {
   width: 100vw;
   height: 100vh;
 }
@@ -96,6 +96,90 @@ main {
   }
 }
 
+#new-scavenger-hunt {
+  display: grid;
+  grid-template: 100px 150px 1fr 1fr 1fr 1fr 1fr 100px/  1fr 1fr 1fr 1fr 1fr 1fr;
+  background-color: lightgrey;
+
+  nav {
+    grid-area: 1 / 1 / 2 / 7;
+    display: grid;
+    grid-template: 1fr / 50px 1fr 1fr 1fr 50px;
+    background-color: darkgrey;
+    padding: 17px 0 0 0;
+
+    .username {
+      grid-area: 1 / 3 / 1 / 4;
+      color: white;
+      font-size: 45px;
+      font-weight: bold;
+      text-align: center;
+    }
+  }
+
+  header {
+    grid-area: 3 / 2 / 3 / 6;
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    padding: 50px 50px 0 50px;
+  }
+
+  .new-form {
+    grid-area: 4 / 2 / 7 / 6;
+
+    input, textarea {
+      width: 100%;
+      border-radius: 10px;
+      margin: 10px 0 10px 0;
+      padding: 15px 15px 15px 20px;
+      font-size: 30px;
+      border: solid 1px darkgrey;
+    }
+
+    textarea {
+      height: 200px;
+    }
+
+    .form-buttons {
+      display: grid;
+      grid-template: 1fr 1fr / 1fr;
+
+      .form-button {
+        padding: 10px 0 0 0;
+        margin: 10px 0 10px 0;
+        font-size: 30px;
+      }
+    }
+  }
+
+
+  footer {
+    grid-area: 8 / 1 / 9 / 7;
+    display: grid;
+    grid-template: 1fr / 75px 1fr 1fr 1fr 75px;
+    background-color: darkgrey;
+    padding: 0 0 12px 0;
+
+    .footer-button {
+      color: white;
+      font-size: 50px;
+      font-weight: bold;
+    }
+
+    .sign-out {
+      grid-area: 8 / 2 / 9 / 3;
+      text-align: left;
+    }
+
+    .home {
+      grid-area: 8 / 4 / 9 / 5;
+      text-align: right;
+    }
+  }
+}
+
 
 #form {
   grid-area: 3 / 2 / 6 / 6;
@@ -134,7 +218,6 @@ main {
     width: 100%;
     font-size:25px;
     margin: 0 0 5px 0;
-
 
     .submit-button {
       grid-area: 1 / 4 / 4 / 6;
