--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -96,7 +96,7 @@ html, body, main {
   }
 }
 
-#new-scavenger-hunt {
+#scavenger-hunt-new-edit {
   display: grid;
   grid-template: 100px 150px 1fr 1fr 1fr 1fr 1fr 100px/  1fr 1fr 1fr 1fr 1fr 1fr;
   background-color: lightgrey;
@@ -126,7 +126,7 @@ html, body, main {
     padding: 50px 50px 0 50px;
   }
 
-  .new-form {
+  .scavenger-hunt-form {
     grid-area: 4 / 2 / 7 / 6;
 
     input, textarea {
