--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -34,43 +34,14 @@ html, body, main {
 
   nav {
     grid-area: 1 / 1 / 2 / 7;
-    display: grid;
-    grid-template: 1fr / 50px 1fr 1fr 1fr 50px;
-    background-color: darkgrey;
-    padding: 17px 0 0 0;
 
     .username {
       grid-area: 1 / 3 / 1 / 4;
-      color: white;
-      font-size: 45px;
-      font-weight: bold;
-      text-align: center;
     }
   }
 
   footer {
     grid-area: 8 / 1 / 9 / 7;
-    display: grid;
-    grid-template: 1fr / 75px 1fr 1fr 1fr 75px;
-    background-color: darkgrey;
-    padding: 0 0 12px 0;
-
-    .footer-button {
-      color: white;
-      font-size: 50px;
-      font-weight: bold;
-    }
-
-    .sign-out {
-      grid-area: 8 / 2 / 9 / 3;
-      text-align: left;
-    }
-
-    .home {
-      grid-area: 8 / 4 / 9 / 5;
-      text-align: right;
-    }
-
   }
 
   .form-button {
@@ -103,17 +74,9 @@ html, body, main {
 
   nav {
     grid-area: 1 / 1 / 2 / 7;
-    display: grid;
-    grid-template: 1fr / 50px 1fr 1fr 1fr 50px;
-    background-color: darkgrey;
-    padding: 17px 0 0 0;
 
     .username {
       grid-area: 1 / 3 / 1 / 4;
-      color: white;
-      font-size: 45px;
-      font-weight: bold;
-      text-align: center;
     }
   }
 
@@ -154,29 +117,8 @@ html, body, main {
     }
   }
 
-
   footer {
     grid-area: 8 / 1 / 9 / 7;
-    display: grid;
-    grid-template: 1fr / 75px 1fr 1fr 1fr 75px;
-    background-color: darkgrey;
-    padding: 0 0 12px 0;
-
-    .footer-button {
-      color: white;
-      font-size: 50px;
-      font-weight: bold;
-    }
-
-    .sign-out {
-      grid-area: 8 / 2 / 9 / 3;
-      text-align: left;
-    }
-
-    .home {
-      grid-area: 8 / 4 / 9 / 5;
-      text-align: right;
-    }
   }
 }
 
@@ -252,4 +194,41 @@ html, body, main {
   position:relative;
   color:#ffffff;
   top: 1px;
+}
+
+footer {
+  display: grid;
+  grid-template: 1fr / 75px 1fr 1fr 1fr 75px;
+  background-color: darkgrey;
+  padding: 0 0 12px 0;
+
+  .footer-button {
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
+  }
+
+  .sign-out {
+    grid-area: 8 / 2 / 9 / 3;
+    text-align: left;
+  }
+
+  .home {
+    grid-area: 8 / 4 / 9 / 5;
+    text-align: right;
+  }
+}
+
+nav {
+  display: grid;
+  grid-template: 1fr / 50px 1fr 1fr 1fr 50px;
+  background-color: darkgrey;
+  padding: 17px 0 0 0;
+
+  .username {
+    color: white;
+    font-size: 45px;
+    font-weight: bold;
+    text-align: center;
+  }
 }
