--- a/app/views/user_scavenger_hunts/index.html.erb
+++ b/app/views/user_scavenger_hunts/index.html.erb
@@ -1,12 +1,25 @@
-<h2><%= "#{@username}'s Scavenger Hunts'" %></h2>
-<ul>
-  <% @scavenger_hunts.each do |hunt| %>
-    <%= link_to hunt.name, scavenger_hunt_path(hunt.id) %>
-    <li><%= hunt.username %></li>
-    <li><%= hunt.description %></li>
-    <% if current_user.id == hunt.user_id %>
-      <%= button_to 'Edit', edit_scavenger_hunt_path(hunt.id), method: :get %>
-      <%= button_to 'Delete', scavenger_hunt_path(hunt.id), method: :delete %>
+<main id="index">
+  <nav>
+     <div class="username">
+       <%= "#{@username}'s Scavenger Hunts'" %>
+     </div>
+  </nav>
+  <div class='cards-container'>
+    <% @scavenger_hunts.each do |hunt| %>
+    <ul class='scavenger-hunt-card'>
+      <div class="card-left">
+        <%= link_to hunt.name, scavenger_hunt_path(hunt.id) %>
+        <li>Description: <%= hunt.description %></li>
+      </div>
+      <% if current_user.id == hunt.user_id %>
+        <%= link_to '<i class="fa fa-pencil-square aria-hidden="true""></i>'.html_safe, edit_scavenger_hunt_path(hunt.id), method: :get, class: 'edit-btn' %>
+        <%= link_to '<i class="fa fa-trash aria-hidden="true""></i>'.html_safe, scavenger_hunt_path(hunt.id), method: :delete, class: 'delete-btn' %>
+      <% end %>
+    </ul>
     <% end %>
-  <% end %>
-</ul>
+  </div>
+  <footer>
+    <%= link_to '<i class="fas fa-home"></i>'.html_safe, root_path, class: 'footer-button home', title: 'Home' %>
+    <%= link_to '<i class="fas fa-sign-out-alt"></i>'.html_safe, logout_path, method: :delete, class: 'footer-button sign-out', title: 'Sign out' %>
+  </footer>
+</main>
