Update component props and active channel to create unique channel for user and scavenger hunt

--- a/app/views/scavenger_hunts/show.html.erb
+++ b/app/views/scavenger_hunts/show.html.erb
@@ -4,4 +4,4 @@
 
 <%= link_to 'Delete', scavenger_hunt_path(@scavenger_hunt.id), method: :delete %>
 
-<%= react_component('NewScavengerHuntContainer', props: {}, prerender: false) %>
+<%= react_component('NewScavengerHuntContainer', props: {user_id: current_user.id}, prerender: false) %>
