--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,6 +1,6 @@
 #index {
   display: grid;
-  grid-template: 100px 150px 1fr 1fr 1fr 1fr 1fr 100px/  1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template: 100px 150px 1fr 1fr 1fr 1fr 1fr 10px 100px/  1fr 1fr 1fr 1fr 1fr 1fr;
 
   nav {
     grid-area: 1 / 1 / 2 / 7;
@@ -20,7 +20,7 @@
       display: grid;
       grid-template: 125px /  1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
       padding-top: 2.5%;
-      margin-top: 4%;
+      margin: 10px 0 10px 0;
       box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
       list-style: none;
       background-color: lightgrey;
@@ -38,14 +38,14 @@
       }
 
       .edit-btn {
-        grid-area: 1 / 7 / 1 / 7;
+        grid-area: 1 / 8 / 1 / 8;
         padding-top: 20%;
         font-size: 2em;
         color: yellow;
       }
 
       .delete-btn {
-        grid-area: 1 / 8 / 1 / 8;
+        grid-area: 1 / 9 / 1 / 9;
         padding-top: 20%;
         font-size: 2em;
         color: red;
@@ -54,7 +54,6 @@
   }
 
   footer {
-    grid-area: 8 / 1 / 9 / 7;
-    z-index: 100;
+    grid-area: 9 / 1 / 9 / 7;
   }
 }
