Change user id to username on scavenger hunt index

--- a/app/views/scavenger_hunts/index.html.erb
+++ b/app/views/scavenger_hunts/index.html.erb
@@ -10,7 +10,7 @@
         <a href="/scavenger_hunts/<%= hunt.id %>">
           <div class="card-left">
             <span class='card-title'><%= hunt.name %></span>
-            <li>Creator: <%= hunt.user_id %></li>
+            <li>Creator: <%= hunt.username %></li>
             <li>Description: <%= hunt.description %></li>
           </div>
         </a>
