--- a/app/views/user_scavenger_hunts/show.html.erb
+++ b/app/views/user_scavenger_hunts/show.html.erb
@@ -11,3 +11,4 @@
   <%= link_to 'Edit', '#' %>
   <%= link_to 'Delete', '#' %>
 <% end %>
+<%= link_to 'Start this Hunt', scavenger_hunt_path(@scavenger_hunt.id), method: :get %>
