--- a/app/views/scavenger_hunts/show.html.erb
+++ b/app/views/scavenger_hunts/show.html.erb
@@ -1,7 +1,16 @@
-<%= @scavenger_hunt.name %>
-<%= @scavenger_hunt.username %>
-<%= @scavenger_hunt.description %>
+<main id="scavenger-hunt-map">
+  <nav>
+     <div class="username">
+       <%= "#{@scavenger_hunt.name}" %>
+     </div>
+  </nav>
 
-<%= link_to 'Delete', scavenger_hunt_path(@scavenger_hunt.id), method: :delete %>
+  <div class="map">
+    <%= react_component('NewScavengerHuntContainer', props: {user_id: current_user.id}, prerender: false) %>
+  </div>
 
-<%= react_component('NewScavengerHuntContainer', props: {user_id: current_user.id}, prerender: false) %>
+  <footer>
+    <%= link_to '<i class="fas fa-home"></i>'.html_safe, root_path, class: 'footer-button home', title: 'Home' %>
+    <%= link_to '<i class="fas fa-sign-out-alt"></i>'.html_safe, logout_path, method: :delete, class: 'footer-button sign-out', title: 'Sign out' %>
+  </footer>
+</main>
