--- a/app/assets/stylesheets/scavenger-hunt-map.scss
+++ b/app/assets/stylesheets/scavenger-hunt-map.scss
@@ -21,6 +21,13 @@
         padding: 0px 0 20px 0 ;
         border-top: 0px;
         min-height: 75px;
+
+        button {
+          font-size: 20px;
+          font-weight: 600;
+          border: 0px;
+          border-radius: 10px;
+        }
       }
 
   }
