Update styles for cards on index pages, and to accomidate for url bar on mobile

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -24,7 +24,7 @@
       box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
       list-style: none;
       background-color: lightgrey;
-      height: 375px;
+      min-height: 375px;
 
       a {
         grid-area: 1 / 1 / 1 / 9;
