--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,6 +1,12 @@
-html, body, main {
+html {
   width: 100vw;
   height: 100vh;
+}
+
+main {
+  position: fixed;
+  height: 100%;
+  width: 100%;
 }
 
 #home {
