Update grid styling for index pages and update link for current_scavenger_hunts

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -18,7 +18,7 @@
 
     .scavenger-hunt-card {
       display: grid;
-      grid-template: 125px /  1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template: 1fr 1fr 1fr 1fr 1fr 1fr/  1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
       padding: 20px 20px 15px 20px;
       margin: 10px 0 10px 0;
       box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
@@ -27,7 +27,7 @@
       min-height: 375px;
 
       a {
-        grid-area: 1 / 1 / 1 / 9;
+        grid-area: 1 / 1 / 7 /10;
         text-decoration: none;
         color: black;
 
@@ -44,15 +44,15 @@
       }
 
       .edit-btn {
-        grid-area: 1 / 8 / 1 / 8;
+        grid-area: 1 / 8 / 2 / 8;
         // padding: 10px 0 0 0;
         font-size: 2em;
         color: #537D8D;
       }
 
       .delete-btn {
-        grid-area: 1 / 9 / 1 / 9;
-        // padding: 10px 0 0 0;
+        grid-area: 1 / 9 / 2 / 9;
+        padding: 0 10px 0 0;
         font-size: 2em;
         color: #537D8D;
       }
