Update onclick for add point button to reset flash div styling

--- a/app/assets/stylesheets/new-point-form.scss
+++ b/app/assets/stylesheets/new-point-form.scss
@@ -26,7 +26,7 @@
       font-weight: 500;
     }
 
-    .flash-message-active {
+    .flash-message-success {
       background-color: #768d87;
     }
 
