--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,9 @@
+<% flash.each do |key, value| %>
+  <div class="flash-<%= key %> notice">
+    <%= value %>
+  </div>
+<% end %>
+
 <% if current_user %>
   <main id="dashboard">
     <nav>
