--- a/app/assets/stylesheets/user-scavenger-hunt.scss
+++ b/app/assets/stylesheets/user-scavenger-hunt.scss
@@ -1,6 +1,6 @@
 #user-scavenger-hunt {
   display: grid;
-  grid-template: 100px 150px 1fr 1fr 1fr 1fr 1fr 10px 100px /  1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template: 100px 1fr 1fr 1fr 1fr 1fr 1fr 10px 100px /  1fr 1fr 1fr 1fr 1fr 1fr;
 
   nav {
     grid-area: 1 / 1 / 2 / 7;
@@ -11,7 +11,7 @@
   }
 
   .scavenger-hunt-information {
-    grid-area: 2 / 2 / 5 / 6;
+    grid-area: 2 / 2 / 4 / 6;
     padding: 75px 0 0 0;
 
     .scavenger-hunt-description {
@@ -66,6 +66,7 @@
 
   .points-container {
     grid-area: 5 / 2 / 10 / 6;
+    margin: 25px 0 0 0;
     display: flex;
     flex-direction: column;
     overflow: auto;
