Add styling for success flash message. Add flash message to views. Update flash messages for user registration sequence

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -11,6 +11,12 @@
     }
   }
 
+  .flash-success {
+    height: 100px;
+    padding: 25px 0 0 0;
+    background-color: darkgrey;
+  }
+
   footer {
     grid-area: 8 / 1 / 8 / 7;
   }
