Revise page header

--- a/app/views/points/new.html.erb
+++ b/app/views/points/new.html.erb
@@ -6,7 +6,7 @@
 <main id="new-point-form">
   <nav>
      <div class="username">
-       <span>Add a Point to <%= current_user.username %></span><br>
+       <span>Add a New Point</span><br>
        <div class="flash-message"></div>
      </div>
   </nav>
