Add script for current scavenger hunt delete/fetch. Update styling and HTML accordingly

--- a/app/views/current_scavenger_hunts/index.html.erb
+++ b/app/views/current_scavenger_hunts/index.html.erb
@@ -1,9 +1,10 @@
 <main id="index">
   <nav>
      <div class="username">
-       <%= "Current Scavenger Hunts" %>
+       <span>Current Scavenger Hunts</span>
      </div>
   </nav>
+  <div class="flash-message"></div>
   <div class='cards-container'>
     <% @scavenger_hunts.each do |hunt| %>
       <div class='scavenger-hunt-card'>
@@ -14,7 +15,7 @@
             <li>Description: <%= hunt.description %></li>
           </div>
         </a>
-        <%= link_to '<i class="fas fa-trash-alt"></i>'.html_safe, current_scavenger_hunt_path(hunt.scavenger_hunt_id), method: :delete, class: 'delete-btn' %>
+        <%= link_to '<i class="fas fa-trash-alt"></i>'.html_safe, "#", class: 'delete-btn', username: "#{current_user.username}", token: "#{current_user.token}", scavenger_hunt_id: "#{hunt.scavenger_hunt_id}"%>
       </div>
     <% end %>
   </div>
@@ -23,3 +24,5 @@
     <%= link_to '<i class="fas fa-sign-out-alt"></i>'.html_safe, logout_path, method: :delete, class: 'footer-button sign-out', title: 'Sign out' %>
   </footer>
 </main>
+
+<%= javascript_include_tag 'current_scavenger_hunts_index.js' %>
