--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,6 +1,6 @@
 #index {
   display: grid;
-  grid-template: 100px 150px 1fr 1fr 1fr 1fr 1fr 10px 100px /  1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template: 100px 50px 50px 1fr 1fr 1fr 1fr 1fr 10px 100px /  1fr 1fr 1fr 1fr 1fr 1fr;
 
   nav {
     grid-area: 1 / 1 / 2 / 7;
@@ -10,8 +10,23 @@
     }
   }
 
+  .flash-message {
+    grid-area: 2 / 1 / 3 / 7;
+    height: 100%;
+    width: 100%;
+    font-size: 25px;
+    font-weight: 500;
+    padding: 2px 0 0 0;
+    text-align: center;
+    color: white;
+  }
+
+  .flash-message-success {
+    background-color: #768d87;
+  }
+
   .cards-container {
-    grid-area:  2 / 2 / 9 / 6;
+    grid-area:  4 / 2 / 9 / 6;
     display: flex;
     flex-direction: column;
     overflow: auto;
@@ -60,6 +75,6 @@
   }
 
   footer {
-    grid-area: 9 / 1 / 9 / 7;
+    grid-area: 10 / 1 / 10 / 7;
   }
 }
