Add .unbind to click events. Add flash messgae div to user scavenger hunt show page. Update flash message styling.

--- a/app/views/user_scavenger_hunts/show.html.erb
+++ b/app/views/user_scavenger_hunts/show.html.erb
@@ -4,8 +4,13 @@
        <%= "#{@scavenger_hunt.name}" %>
      </div>
   </nav>
-
-
+  <div class="flash-message">
+    <% flash.each do |key, value| %>
+      <div class="flash-<%= key %>">
+        <%= value %>
+      </div>
+    <% end %>
+  </div>
   <div class="scavenger-hunt-information">
     <div class="scavenger-hunt-description">
       <span><b>Description:</b><br/> <%= @scavenger_hunt.description %></span>
