--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -16,12 +16,12 @@
     width: 100%;
     font-size: 25px;
     font-weight: 500;
-    padding: 2px 0 0 0;
+    padding: 0 0 7px 0;
     text-align: center;
     color: white;
   }
 
-  .flash-message-success {
+  .flash-success {
     background-color: #768d87;
   }
 
