--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -30,7 +30,7 @@ main {
   background-color: #09814A;
   color: white;
   font-size: 2em;
-  font-weight: bold;
+  font-weight: 500;
   text-align: center
 }
 
