--- a/app/assets/stylesheets/user-scavenger-hunt.scss
+++ b/app/assets/stylesheets/user-scavenger-hunt.scss
@@ -10,6 +10,20 @@
     }
   }
 
+  .flash-message {
+    grid-area: 2 / 1 / 3 / 7;
+    height: 100%;
+    width: 100%;
+    font-size: 13px;
+    padding: 0 0 6px 0;
+    text-align: center;
+    color: white;
+  }
+
+  .flash-success {
+    background-color: #768d87;
+  }
+
   .scavenger-hunt-information {
     grid-area: 2 / 2 / 4 / 6;
     padding: 75px 0 0 0;
