Update flash message styling

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -26,8 +26,8 @@ main {
 }
 
 .flash-success {
-  padding-top: 10px;
-  background-color: #09814A;
+  padding-top: 8px;
+  background-color: #768d87;
   color: white;
   font-size: 2em;
   font-weight: 500;
