Update styling. Add creator attr_accessor to scavenger hunt model object in connection with backend updates

--- a/app/views/current_scavenger_hunts/index.html.erb
+++ b/app/views/current_scavenger_hunts/index.html.erb
@@ -11,7 +11,7 @@
         <a href="/scavenger_hunts/<%= hunt.scavenger_hunt_id %>">
           <div class="card-left">
             <span class='card-title'><%= hunt.name %></span>
-            <li>Creator: <%= hunt.user_id %></li>
+            <li>Creator: <%= hunt.creator %></li>
             <li>Description: <%= hunt.description %></li>
           </div>
         </a>
